--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "gatsby-starter-theme-workspace",
+  "name": "gatsby-theme-figure-blog",
   "private": true,
   "version": "0.0.1",
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "yarn workspace example build"
   },
   "workspaces": [
-    "gatsby-theme-minimal",
+    "gatsby-theme-figure-blog",
     "example"
   ]
 }
