--- a/gatsby-theme-figure-blog/package.json
+++ b/gatsby-theme-figure-blog/package.json
@@ -8,5 +8,11 @@
     "gatsby": "^5.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.13",
+    "gatsby-plugin-postcss": "^6.3.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
