--- a/gatsby-theme-figure-blog/package.json
+++ b/gatsby-theme-figure-blog/package.json
@@ -11,8 +11,16 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-postcss": "^6.3.0",
+    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-remark-images": "^7.3.1",
+    "gatsby-remark-prismjs": "^7.3.0",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.3.2",
+    "gatsby-transformer-sharp": "^5.3.1",
     "postcss": "^8.4.20",
+    "prismjs": "^1.29.0",
     "tailwindcss": "^3.2.4"
   }
 }
