--- a/gatsby-theme-figure-blog/package.json
+++ b/gatsby-theme-figure-blog/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "gatsby-theme-figure-blog",
+  "name": "@tenpamk2/gatsby-theme-figure-blog",
   "version": "1.0.0",
   "main": "index.js",
   "author": "tenpaMk2 <wavyroom@gmail.com> (@tenpaMk2)",
+  "description": "The blogging theme that is suitable for photographs.",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "gatsby": "^5.0.0",
     "react": "^18.0.0",
@@ -23,5 +27,19 @@
     "postcss": "^8.4.20",
     "prismjs": "^1.29.0",
     "tailwindcss": "^3.2.4"
+  },
+  "keywords": [
+    "gatsby",
+    "gatsby-theme",
+    "gatsby-plugin",
+    "tenpaMk2"
+  ],
+  "bugs": {
+    "url": "https://github.com/tenpaMk2/gatsby-theme-figure-blog/issues"
+  },
+  "homepage": "https://tenpamk2-blog.netlify.app/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tenpaMk2/gatsby-theme-figure-blog.git"
   }
 }
