:arrow_up: install prettier and prettier-plugin-tailwindcss. https://tailwindcss.com/blog/automatic-class-sorting-with-prettier

--- a/theme/package.json
+++ b/theme/package.json
@@ -41,5 +41,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/tenpaMk2/gatsby-theme-figure-blog.git"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.1"
   }
 }
