--- a/theme/package.json
+++ b/theme/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-sharp": "^5.3.1",
     "postcss": "^8.4.20",
     "prismjs": "^1.29.0",
+    "react-share": "^4.4.1",
     "tailwindcss": "^3.2.4"
   },
   "keywords": [
