--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,9 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^5.3.3",
     "@tenpamk2/gatsby-theme-figure-blog": "^1.0.0",
+    "gatsby": "^5.3.3",
+    "gatsby-plugin-feed": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
