--- a/theme/package.json
+++ b/theme/package.json
@@ -19,8 +19,10 @@
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-postcss": "^6.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-twitter": "^5.7.0",
     "gatsby-remark-images": "^7.3.1",
     "gatsby-remark-prismjs": "^7.3.0",
+    "gatsby-remark-responsive-iframe": "^6.7.0",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
