--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "gatsby clean",
-    "develop": "gatsby develop -H 0.0.0.0",
+    "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve"
   },
