--- a/theme/package.json
+++ b/theme/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
+    "hast-util-to-jsx-runtime": "^1.2.0",
     "postcss": "^8.4.20",
     "prismjs": "^1.29.0",
     "react-share": "^4.4.1",
