--- a/theme/package.json
+++ b/theme/package.json
@@ -29,6 +29,7 @@
     "hast-util-to-jsx-runtime": "^1.2.0",
     "postcss": "^8.4.20",
     "prismjs": "^1.29.0",
+    "react-compare-slider": "^2.2.0",
     "react-share": "^4.4.1",
     "tailwindcss": "^3.2.4"
   },
