--- a/theme/package.json
+++ b/theme/package.json
@@ -31,7 +31,8 @@
     "prismjs": "^1.29.0",
     "react-compare-slider": "^2.2.0",
     "react-share": "^4.4.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "unist-util-visit-parents": "^5.1.3"
   },
   "keywords": [
     "gatsby",
