--- a/theme/package.json
+++ b/theme/package.json
@@ -2,7 +2,7 @@
   "name": "@tenpamk2/gatsby-theme-figure-blog",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "tenpaMk2 <wavyroom@gmail.com> (@tenpaMk2)",
+  "author": "tenpaMk2 <wavyroom@gmail.com> (https://github.com/tenpaMk2)",
   "description": "The blogging theme that is suitable for photographs.",
   "license": "MIT",
   "publishConfig": {
