--- a/theme/package.json
+++ b/theme/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
     "hast-util-to-jsx-runtime": "^1.2.0",
+    "hast-util-to-text": "^3.1.2",
     "postcss": "^8.4.20",
     "prismjs": "^1.29.0",
     "react-compare-slider": "^2.2.0",
