--- a/theme/package.json
+++ b/theme/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-postcss": "^6.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-twitter": "^5.7.0",
+    "gatsby-remark-autolink-headers": "^6.10.0",
     "gatsby-remark-images": "^7.3.1",
     "gatsby-remark-prismjs": "^7.3.0",
     "gatsby-remark-responsive-iframe": "^6.7.0",
